# rusty_tarot

./: Cargo.toml  dockerfile  dockerfile.alpine
src/: main.rs
