[package]
name = "rusty_tarot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nickel = "0.11.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = true }
futures-executor = "0.3"
#openssl = { version = "0.10.45", features = ["vendored"] } #To appease the linux image install